fix put member
